--- a/respo/service-feign.yml
+++ b/respo/service-feign.yml
@@ -6,7 +6,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://120.78.88.169:8763/eureka/,http://120.78.88.169:8761/eureka/,http://120.78.88.169:8762/eureka/
+      defaultZone: http://127.0.0.1:8761/eureka/
 feign:
   hystrix:
     enabled: true
