--- a/respo/service-feign.yml
+++ b/respo/service-feign.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: service-feign
   zipkin:
-    base-url: http://localhsot:9411
+    base-url: http://localhost:9411
 eureka:
   client:
     serviceUrl:
